static files added

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ POSTGRES_USER="default"
 POSTGRES_PASSWORD="bri7ESVmaj2X"
 POSTGRES_HOST="ep-wandering-frog-a4l2vubu-pooler.us-east-1.aws.neon.tech"
 POSTGRES_DATABASE="verceldb"
+
+
+CLOUDINARY_CLOUD_NAME='dsyexve8n'
+CLOUDINARY_API_KEY='896875966237192'
+CLOUDINARY_API_SECRET='RU_ziNGYl-eJoMrY5JanlVvYWS0'
