--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ SINGLE_PACKAGE_PRICE_ID=price_1Q7KV1LjmaC4Y7ahAmofzBPq
 BRONZE_TEACHER_PACKAGE_PRICE_ID=price_1Q7WSmLjmaC4Y7ahN3eKETh4
 SILVER_TEACHER_PACKAGE_PRICE_ID=price_1Q7WUWLjmaC4Y7ahMMkX1XFi
 GOLD_TEACHER_PACKAGE_PRICE_ID=price_1Q7WVdLjmaC4Y7ah80SfV4yI
+TRIAL_TEACHER_PACKAGE_PRICE_ID=price_1RltxhLjmaC4Y7ahYtBLqG77
 BRONZE_SCHOOL_PACKAGE_PRICE_ID=price_1Q7WWZLjmaC4Y7ahzYaFV937
 SILVER_SCHOOL_PACKAGE_PRICE_ID=price_1Q7WXQLjmaC4Y7ahnZgw73bJ
 GOLD_SCHOOL_PACKAGE_PRICE_ID=price_1Q7WYKLjmaC4Y7ahhknGPwja
